fixed the spacing issues in the footer and the home page

--- a/src/client/app/customer/home/assets/css/home.component.scss
+++ b/src/client/app/customer/home/assets/css/home.component.scss
@@ -85,11 +85,13 @@
         }
     }
     .landing-feature-section {
-        padding: 15px;
+        padding: 30px;
         .landing-feature-section-image{
-            width: 100%;
+            margin-bottom: 30px;
+            width: 80%;
         }
         .landing-feature-title-content {
+            margin-bottom: 30px;
             text-align: center;
             .feature-main-title {
                 color: material-color('deep-purple', '700');
